--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@xyflow/react": "^12.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "uuid": "^10.0.0",
     "zustand": "^4.5.5"
   },
