--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.6.2",
     "nodemon": "^3.1.4",
     "rimraf": "^6.0.1",
+    "socket.io": "^4.8.0",
     "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   }
